Change part of the ie behavior.

--- a/public/ie.html
+++ b/public/ie.html
@@ -4,7 +4,7 @@
 
     <title>Desconstruindo a web</title>
     <style>
-		html { 	background: url(img/ie-bg.png) no-repeat center 100px; padding: 0; }
+		html { 	background: url(assets/ie-bg.png) no-repeat center 100px; padding: 0; }
 		body { text-align: center; padding: 0; margin: 0;}
 		div { margin: 0; width: 100%; background: #ffff66; padding: 5px 0;}
 		h1 { color: #555; font-size: 130%; }
