--- a/public/ie.html
+++ b/public/ie.html
@@ -32,7 +32,7 @@
 		s.parentNode.insertBefore(e, s);
 		return s;
 	}
-	window._gaq = [['_setAccount','TODO'],['_trackPageview']];
+	window._gaq = [['_setAccount','UA-83430510-1'],['_trackPageview']];
 	loadAsync('http://www.google-analytics.com/ga.js');
 	</script>
 
